# python_ai_project

./: .gitignore  AGENTS.md  README.md  commands.md  draft.md  plan.md  pyproject.toml  report.md  report_outline.md
outputs/figures/: results_table.md
outputs/logs/: deep_cnn_history.json  deep_cnn_summary.json  mlp_history.json  mlp_summary.json  resnet18_history.json  resnet18_summary.json  small_cnn_history.json  small_cnn_summary.json  vit_b16_history.json  vit_b16_summary.json
src/cifar_compare/: __init__.py  plot_results.py  train.py  utils.py
src/cifar_compare.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cifar_compare/data/: datasets.py
src/cifar_compare/models/: __init__.py  cnn_small.py  deep_cnn.py  mlp.py  resnet.py  vit.py
tests/: test_imports.py
wandb/: latest-run
wandb/run-20251207_001139-lcctrb3r/: run-lcctrb3r.wandb
wandb/run-20251207_001139-lcctrb3r/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251207_001226-i5kaxgex/files/: config.yaml  requirements.txt  wandb-metadata.json
wandb/run-20251207_001906-swnz6ffg/: run-swnz6ffg.wandb
wandb/run-20251207_001906-swnz6ffg/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251207_002026-oqd4jhyr/: run-oqd4jhyr.wandb
wandb/run-20251207_002026-oqd4jhyr/files/: config.yaml  wandb-metadata.json  wandb-summary.json
wandb/run-20251207_002619-snmh46al/: run-snmh46al.wandb
wandb/run-20251207_004918-5s1mklek/: run-5s1mklek.wandb
wandb/run-20251207_005705-gletd2os/: run-gletd2os.wandb
(+16 files in other folders)
