[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cifar-compare"
version = "0.0.1"
description = "CIFAR-10 model comparison (MLP/CNN/ResNet/ViT)"
authors = [{ name = "project-team" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch",
  "torchvision",
  "matplotlib",
  "numpy",
  "tqdm"
]

[project.optional-dependencies]
dev = [
  "pytest"
]
logging = [
  "wandb"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
